--- a/src/main/resources/assets/elementalcraft/lang/en_us.json
+++ b/src/main/resources/assets/elementalcraft/lang/en_us.json
@@ -98,6 +98,7 @@
   "block.elementalcraft.shrine_upgrade_silk_touch": "Silk Touch Shrine Upgrade",
   "block.elementalcraft.shrine_upgrade_planting": "Planting Shrine Upgrade",
   "block.elementalcraft.shrine_upgrade_boneless_growth": "Boneless Growth Shrine Upgrade",
+  "block.elementalcraft.shrine_upgrade_pickup": "Pickup Shrine Upgrade",
 
   "block.elementalcraft.crystalore": "Inert Crystal Ore",
   "block.elementalcraft.whiterock": "White Rock",
@@ -162,6 +163,7 @@
   
   "tooltip.elementalcraft.planting": "Plant back harvested crops",
   "tooltip.elementalcraft.boneless_growth": "Can grow crops that don't accept bonemeal",
+  "tooltip.elementalcraft.pickup": "Will instantly pickup all items within range",
 
   "elementalcraft.landing": "$(thing)ElementalCraft$() is a magic mod based around the 4 $(thing)elements$(): $(thing)fire$(), $(thing)water$(), $(thing)earth$() and $(thing)air$().",
 
@@ -221,11 +223,11 @@
   "elementalcraft.page.breedingshrine0": "The $(item)Breeding Shrine$() uses $(thing)food$() laying around to breed $(thing)annimals$() in range.$(br2)It consumes $(thing)earth element$().",
   "elementalcraft.page.shrine_upgrade0": "You can craft $(thing)shrine upgrades$() to increase the power of your $(thing)shrines$(). thouse upgrades can only be placed at specific places around the $(thing)shrin$().$(br)Upgrades cover a wide range of bonuses from $(thing)speed$(), $(thing)reduce consuption$(), $(thing)range$()... or specific ones like $(thing)silk touch$() or $(thing)fortune$() for the $((l:elmentalcraft:shrines/oreshrine)ore shrine$().",
 
-  "elementalcraft.page.receptacle0": "$(item)Receptacles$() are powerful tools that allow you to move $(ec:source)source$().",
+  "elementalcraft.page.receptacle0": "$(item)Receptacles$() are powerful tools that allow you to move $(ec:source)source$().$(br)You can repair them using $(item)swift alloy$().",
   "elementalcraft.page.pureinfuser0": "The $(item)Pure Infuser$() is the mos powerfull crafting tool. It uses $(item)pedestals$() to channel all four $(thing)elements$() into a single item.$(br)to operate it needs to be circle with each of the four $(item)pedestals$(), each being provided with the correct $(thing)element$() using $(ec:pipe)improved pipes$().$(br)Once this setup is done you can start crafting by puting the correct $(item)ingredient$() on each $(thing)pedestal$() and the main on on the $(thing)pure infuser$().",
   "elementalcraft.page.purerock0": "$(item)Pure Rock$() is an extremely strong stone that is able to resist some of the most powerful blasts event a $(thing)Wither$().",
   "elementalcraft.page.instrument_retriever0": "The $(item)Instrument Output Retriever$() is a finely twicked machine that can interact with $(thing)instruments$() and handle their output for themself, allowing you to extract their output upon completed crafting and store it in a $(item)chest$() for exemple.$(br2)You ca reoriente its input and output by right clicking them.",
-  "elementalcraft.page.spelll_book0": "The $(item)Elementalist Grimoire$() allows you to store $(thing)spells$().You can ringht click it to opn it's inventory'.",
+  "elementalcraft.page.spell_book0": "The $(item)Elementalist Grimoire$() allows you to store $(thing)spells$().You can ringht click it to opn it's inventory'.",
   
   "elementalcraft.page.fireball0": "Throw a $(thing)fire ball$() in the dirrection you are looking at.$(br)Consumes $(thing)fire$().",
   "elementalcraft.page.gravelfall0": "Summon a column of $(item)gravel$() above the targeted $(thing)block$() or $(thing)entity$().$(br)Consumes $(thing)earth$() and three $(item)gravel$().",
