--- a/src/main/resources/assets/elementalcraft/lang/en_us.json
+++ b/src/main/resources/assets/elementalcraft/lang/en_us.json
@@ -6,12 +6,11 @@
   "element.elementalcraft.earth": "Earth",
   "element.elementalcraft.air": "Air",
 
-  "item.elementalcraft.hungerlessring": "Ring of the Hungerless",
+  "item.elementalcraft.element_book": "Elementopedia",
   "item.elementalcraft.focus": "Focus",
   "item.elementalcraft.scroll": "Scroll",
   "item.elementalcraft.spell_book": "Elementalist Grimoire",
   "item.elementalcraft.pure_ore": "Pure Ore",
-  "item.elementalcraft.element_book": "Elementopedia",
 
   "item.elementalcraft.receptacle": "Source Receptacle",
   "item.elementalcraft.receptacle.none": "Empty Source Receptacle",
@@ -72,6 +71,10 @@
   "block.elementalcraft.fireblastfurnace": "Fire Blast Furnace",
   "block.elementalcraft.purifier": "Ore Purifier",
   "block.elementalcraft.source": "Element Source",
+  "block.elementalcraft.source.fire": "Fire Source",
+  "block.elementalcraft.source.water": "Water Source",
+  "block.elementalcraft.source.earth": "Earth Source",
+  "block.elementalcraft.source.air": "Air Source",
   "block.elementalcraft.elementpipe_impaired": "Impaired Element Pipe",
   "block.elementalcraft.elementpipe": "Element Pipe",
   "block.elementalcraft.elementpipe_improved": "Improved Element Pipe",
@@ -136,8 +139,10 @@
   "shrine_upgrade_bonus.elementalcraft.element_consuption": "Element Consuption: %s",
   "shrine_upgrade_bonus.elementalcraft.capacity": "Capacity: %s",
   "shrine_upgrade_bonus.elementalcraft.range": "Range: %s",
-  
 
+  "elementalcraft.jei.extraction": "Element Extraction",
+  "elementalcraft.jei.extraction_improved": "Improved Element Extraction",
+  "elementalcraft.jei.evaporation": "Element Evaporation",
   "elementalcraft.jei.infusion": "Element Infusion",
   "elementalcraft.jei.tool_infusion": "Element Tool Infusion",
   "elementalcraft.jei.binding": "Element Binding",
@@ -164,6 +169,11 @@
   "tooltip.elementalcraft.planting": "Plant back harvested crops",
   "tooltip.elementalcraft.boneless_growth": "Can grow crops that don't accept bonemeal",
   "tooltip.elementalcraft.pickup": "Will instantly pickup all items within range",
+
+  "message.elementalcraft.connect": "Connected",
+  "message.elementalcraft.disconnect": "Disconnected",
+  "message.elementalcraft.extract": "Extracting",
+  "message.elementalcraft.insert": "Inserting",
 
   "elementalcraft.landing": "$(thing)ElementalCraft$() is a magic mod based around the 4 $(thing)elements$(): $(thing)fire$(), $(thing)water$(), $(thing)earth$() and $(thing)air$().",
 
@@ -193,11 +203,11 @@
   "elementalcraft.page.element_holder0": "$(item)Element Holders$() can hold $(thing)elements$(), for transport or use by $(thing)spells$().$(br)To fill them hold right click on a $(ec:source)source$() of the same $(thing)element$() type. You can also transpher $(thing)element$() back to a receiver by holding right click on it.",
   "elementalcraft.page.focus0": "A $(item)focus$() can hold multiple $(thing)spells$().$(br)You can add $(thing)spells$() to it by putting the $(item)focus$() in an $(intem)anvil$() with the $(item)scroll$() of the $(thing)spell$().You can circle through $(thing)spells$() by holding shift and scrolling.",
   "elementalcraft.page.spell_desk0": "To craft $(thing)spells$() you need first nedd to craft $(item)spell desk$().$(br)To use it just rightclick it with some $(item)scroll paper$() and then with som $(item)infused crystal$(), the bigger the crystal stack the more chance you will have to get a spell, the resulting spell is allinged with the same $(thing)element as the used crystal.",
-   "elementalcraft.page.shards0": "$(thing)Raw element shards$() are $(thing)elements$() that crystalized in contact with $(thing)creatures$().$(br)They can be transformed into usable $(thing)element$() with an $(l:elmentalcraft:instruments/evaporator)evaporator$().",
+  "elementalcraft.page.shards0": "$(thing)Raw element shards$() are $(thing)elements$() that crystalized in contact with $(thing)creatures$().$(br)They can be transformed into usable $(thing)element$() with an $(l:instruments/evaporator)evaporator$().",
 
   "elementalcraft.page.tank0": "The $(item)Element Container$() is a an advanced $(thing)element$() storage, it can store more $(thing)elements$() than the $(ec:tank_small)Small Container$() and is compatible with all $(thing)instruments$().",
   "elementalcraft.page.extractor0": "Use an $(item)Extractor$() to extract $(thing)elements$() form $(ec:source)sources$().$(br2)To do so place the $(item)Extractor$() above a $(ec:tank)Container$() and below the $(ec:source)source$() you want to extract.",
-  "elementalcraft.page.evaporator0": "The $(item)evaporator$() allows you to transform $(l:elmentalcraft:basics/shards)shards$() into $(thing)elements$(). It produce $(thing)elements$() extremly slowly.$(br2)To do so place the $(item)evaporator$() above a $(ec:tank)Container$().",
+  "elementalcraft.page.evaporator0": "The $(item)evaporator$() allows you to transform $(l:basics/shards)shards$() into $(thing)elements$(). It produce $(thing)elements$() extremly slowly.$(br2)To do so place the $(item)evaporator$() above a $(ec:tank)Container$().",
   "elementalcraft.page.infuser0": "Now that you can extract $(thing)elements$() it's time to infuse it.$(br2)To do so you need an $(item)Infuser$() and put it on top of a $(ec:tank)Container$().$(br)D'ont forget to connect it to the $(ec:extractor)Extractor$()'s $(ec:tank)Container$() with a $(ec:pipe)pipe$().",
   "elementalcraft.page.tank_small0": "The $(item)Small Element Container$() is a simple $(thing)element$() storage, it can $(thing)elements$() provide to $(thing)instruments$().$(br2)All $(thing)instruments$() need to be placed on top of a $(item)Container$() to operate.$(br)The $(item)Small Element Container$() can only work with $(ec:extractor)Extractors$() and $(ec:infuser)Infusers$().$(br)You can also transfer $(thing)elements$() from one $(item)Container$() to another using $(ec:pipe)pipes$().",
   "elementalcraft.page.binder0": "The $(item)Binder$() is one of the most important $(thing)Instrument$(), it allows Channeling $(thing)elements$() to combine multiples items together.$(br)Be careful because the order in witch you put the Items is important.$(br)As for any other $(thing)Instruments$(), the $(item)Binder$() needs to be on top of a $(ec:tank)Container$(). but not a $(ec:tank_small)Small Container$().",
@@ -219,11 +229,11 @@
   "elementalcraft.page.growthshrine0": "The $(item)Growth Shrine$() accelerate $(thing)crops$() growth above it.$(br2)It consumes $(thing)water element$().",
   "elementalcraft.page.harvestshrine0": "The $(item)Harvest Shrine$() harvest $(thing)crops$() below it.$(br2)It consumes $(thing)earth element$().",
   "elementalcraft.page.overloadshrine0": "The $(item)Overload Shrine$() boost the speed of the $(item)block$() its facing.$(br2)It consumes $(thing)air element$().",
-  "elementalcraft.page.enderlockshrine0": "The $(item)Ender Lock Shrine$() channels $(thing)water$() through the ender matrix preventing anything passing through it.$(br)Near it $(thing)endermen$() can't teleport, $(item)ender pearls$() or $(l:elmentalcraft:spells/ender_strike)Ender strinke$() don''t works.$(br2)It consumes $(thing)water element$().",
+  "elementalcraft.page.enderlockshrine0": "The $(item)Ender Lock Shrine$() channels $(thing)water$() through the ender matrix preventing anything passing through it.$(br)Near it $(thing)endermen$() can't teleport, $(item)ender pearls$() or $(l:spells/ender_strike)Ender strinke$() don''t works.$(br2)It consumes $(thing)water element$().",
   "elementalcraft.page.breedingshrine0": "The $(item)Breeding Shrine$() uses $(thing)food$() laying around to breed $(thing)annimals$() in range.$(br2)It consumes $(thing)earth element$().",
-  "elementalcraft.page.shrine_upgrade0": "You can craft $(thing)shrine upgrades$() to increase the power of your $(thing)shrines$(). thouse upgrades can only be placed at specific places around the $(thing)shrin$().$(br)Upgrades cover a wide range of bonuses from $(thing)speed$(), $(thing)reduce consuption$(), $(thing)range$()... or specific ones like $(thing)silk touch$() or $(thing)fortune$() for the $((l:elmentalcraft:shrines/oreshrine)ore shrine$().",
+  "elementalcraft.page.shrine_upgrade0": "You can craft $(thing)shrine upgrades$() to increase the power of your $(thing)shrines$(). thouse upgrades can only be placed at specific places around the $(thing)shrin$().$(br)Upgrades cover a wide range of bonuses from $(thing)speed$(), $(thing)reduce consuption$(), $(thing)range$()... or specific ones like $(thing)silk touch$() or $(thing)fortune$() for the $((l:shrines/oreshrine)ore shrine$().",
 
-  "elementalcraft.page.receptacle0": "$(item)Receptacles$() are powerful tools that allow you to move $(ec:source)source$().$(br)You can repair them using $(item)swift alloy$().",
+  "elementalcraft.page.receptacle0": "$(item)Receptacles$() are powerful tools that allow you to move $(ec:source)source$().You can pickup and place back $(ec:source)source$() into the world using right click.$(br)You can repair them using $(item)swift alloy$().",
   "elementalcraft.page.pureinfuser0": "The $(item)Pure Infuser$() is the mos powerfull crafting tool. It uses $(item)pedestals$() to channel all four $(thing)elements$() into a single item.$(br)to operate it needs to be circle with each of the four $(item)pedestals$(), each being provided with the correct $(thing)element$() using $(ec:pipe)improved pipes$().$(br)Once this setup is done you can start crafting by puting the correct $(item)ingredient$() on each $(thing)pedestal$() and the main on on the $(thing)pure infuser$().",
   "elementalcraft.page.purerock0": "$(item)Pure Rock$() is an extremely strong stone that is able to resist some of the most powerful blasts event a $(thing)Wither$().",
   "elementalcraft.page.instrument_retriever0": "The $(item)Instrument Output Retriever$() is a finely twicked machine that can interact with $(thing)instruments$() and handle their output for themself, allowing you to extract their output upon completed crafting and store it in a $(item)chest$() for exemple.$(br2)You ca reoriente its input and output by right clicking them.",
@@ -232,8 +242,8 @@
   "elementalcraft.page.fireball0": "Throw a $(thing)fire ball$() in the dirrection you are looking at.$(br)Consumes $(thing)fire$().",
   "elementalcraft.page.gravelfall0": "Summon a column of $(item)gravel$() above the targeted $(thing)block$() or $(thing)entity$().$(br)Consumes $(thing)earth$() and three $(item)gravel$().",
   "elementalcraft.page.stonewall0": "Summon a three by three $(thing)stone wall$() in front of you to protect you from attacks.$(br)Consumes $(thing)earth$() and nine $(item)stone$().",
-  "elementalcraft.page.healing0": "Heal you or the targeted $(thing)entity$().$(br)Consumes $(thing)water$().",
-  "elementalcraft.page.ender_strike0": "Teleport behind targeted $(thing)entity$() or closest $(thing)monster$() and strike it with increased damage. Be careful not to use it near an $(l:elmentalcraft:shrines/enderlockshrine)Ender lock shrine$().$(br)Consumes $(thing)air$().",
+  "elementalcraft.page.heal0": "Heal you or the targeted $(thing)entity$().$(br)Consumes $(thing)water$().",
+  "elementalcraft.page.ender_strike0": "Teleport behind targeted $(thing)entity$() or closest $(thing)monster$() and strike it with increased damage. Be careful not to use it near an $(l:shrines/enderlockshrine)Ender lock shrine$().$(br)Consumes $(thing)air$().",
   "elementalcraft.page.item_pull0": "Pull all nearby $(item)items to you.$(br)Consumes $(thing)air$().",
   "elementalcraft.page.animal_growth0": "Fully grow targeted $(thing)animal child$().$(br)Consumes $(thing)water$().",
   "elementalcraft.page.tree_fall0": "Cut down targeted $(thing)tree$().$(br)Consumes $(thing)earth$().",
