--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,9 @@
+1.16.3-2.4.15:
+
+- fix recipes beeing associated to minectraft namespace
+- fix jei not available on server
+
+
 1.16.3-2.4.14:
 
 - fix a bug with pure ore matching ores that are not linked
