--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,9 @@
+1.16.3-2.4.17:
+
+- remove some logspam when JEI isn't present
+- fix a crash when patchouli isn't present (issue #24)
+
+
 1.16.3-2.4.16:
 
 - fix a desync bug with containers
