--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,12 @@
+1.16.4-2.5.1:
+
+- added rune handling for evaporator, pedestals and pure infuser
+- added more config options
+- reduced network usage
+- fix pure infuser not synchronizing correctly
+- fix a bug with element container and comparator
+- fix some loot tables
+
 1.16.4-2.5.0:
 
 - now require minecraft 1.16.4 forge 35.1.13
