--- a/src/main/resources/assets/elementalcraft/lang/en_us.json
+++ b/src/main/resources/assets/elementalcraft/lang/en_us.json
@@ -86,6 +86,7 @@
   "block.elementalcraft.evaporator": "Element Evaporator",
   "block.elementalcraft.infuser": "Element Infuser",
   "block.elementalcraft.binder": "Element Binder",
+  "block.elementalcraft.binder_improved": "Improved Element Binder",
   "block.elementalcraft.crystallizer": "Gem Crystallizer",
   "block.elementalcraft.inscriber": "Rune Inscriber",
   "block.elementalcraft.pedestal": "Pedestal",
@@ -276,6 +277,7 @@
   "elementalcraft.page.fireblastfurnace0": "The $(item)Fire Blast Furnace$() is the $(item)Blast Furnace$() variant of the $(ec:firefurnace)Fire Furnace$().$(br)As for any other $(thing)Instruments$(), the $(item)Fire Blast Furnace$() needs to be on top of a $(ec:tank)Container$(). but not a $(ec:tank_small)Small Container$(). It consumes $(thing)fire$().",
   "elementalcraft.page.extractor_improved0": "The $(item)Improved Extractor$() is an advanced version of the $(ec:extractor)Extractor$(). It extract $(thing)elements$() faster.$(br)As for any other $(thing)Instruments$(), the $(item)Improved Extractor$() needs to be on top of a $(ec:tank)Container$(). but not a $(ec:tank_small)Small Container$().",
   "elementalcraft.page.purifier0": "The $(item)Purifier$() takes $(item)ores$() and purify them to create $(item)Pure ores$() at a ratio of one to two. You can then smelt them into $(item)ingots$() in any $(item)Furnaces$().$(br)As for any other $(thing)Instruments$(), the $(item)Improved Extractor$() needs to be on top of a $(ec:tank)Container$(). but not a $(ec:tank_small)Small Container$().$(br)It consumes $(thing)earth$().",
+  "elementalcraft.page.binder_improved0": "The $(item)Improved Element Binder$() works like a $(ec:binder)Binder$() and $(ec:infuser)Infuser$() meaning it can do either binding or infusion at a faster rate.",
 
   "elementalcraft.page.infusion0": "To infuse an item simply right-click the $(ec:infuser)Infuser$() while holding the item you want to infuse.$(br)Try it now with an $(item)Inert Crystal$().",
   "elementalcraft.page.infusion1": "$An (thing)Infusion$() can also be applied to $(item)tools$(), improving existing $(thing)enchantments$() or giving them new unique abilities.",
